--- a/portfolio.html
+++ b/portfolio.html
@@ -301,10 +301,10 @@ z-index: 3;
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> compositions<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/15tyof.mp3" target="_blank" id="linkzinhoinho">tiptoes .mp3</a><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/i06o5b.mp3" target="_blank" id="linkzinhoinho">forbidden .mp3</a><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/43xa8t.mp3" target="_blank" id="linkzinhoinho">little girl .mp3</a><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/f7m6p1.mp3" target="_blank" id="linkzinhoinho">old stuffie .mp3</a>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/tiptoes.mp3" target="_blank" id="linkzinhoinho">tiptoes .mp3</a><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/forbidden.mp3" target="_blank" id="linkzinhoinho">forbidden .mp3</a><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/little%20girl.mp3" target="_blank" id="linkzinhoinho">little girl .mp3</a><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/old%20stuffie.mp3" target="_blank" id="linkzinhoinho">old stuffie .mp3</a>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -322,7 +322,7 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<object width="450" height="337"><param value="https://files.catbox.moe/j7rice.swf" name="movie"/><param value="high" name="quality"/><embed width="300" height="300" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/j7rice.swf"></embed></object>
+<a href="https://file.pooftie.me/r/flash%20games.rar" target="_blank"><img src="https://i.imgur.com/BltA2XT.gif"/></a>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -356,7 +356,7 @@ z-index: 3;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> video editing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <video width="450" height="auto" controls>
-<source src="https://files.catbox.moe/ggwchs.mp4" type="video/mp4">
+<source src="https://file.pooftie.me/v/i.mp4" type="video/mp4">
 </video>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
@@ -364,7 +364,7 @@ z-index: 3;
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> singing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/l8kn8o.mp3" target="_blank" id="linkzinhoinho">secret base .mp3</a>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/secret%20base.mp3" target="_blank" id="linkzinhoinho">secret base .mp3</a>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -397,8 +397,8 @@ z-index: 3;
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> fonts<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<a href="https://files.catbox.moe/ffdukg.rar" target="_blank"><img src="https://i.imgur.com/KjGQcfl.png"></a><br><br>
-<a href="https://files.catbox.moe/1xv5de.rar" target="_blank"><img src="https://i.imgur.com/RgTmqQx.png"></a>
+<a href="https://file.pooftie.me/r/mimi.rar" target="_blank"><img src="https://i.imgur.com/KjGQcfl.png"></a><br><br>
+<a href="https://file.pooftie.me/r/bby.rar" target="_blank"><img src="https://i.imgur.com/RgTmqQx.png"></a>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
