--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -319,11 +319,6 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 </font>
 <br><br>
 
-<center><sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/PWV17EXytQTcTKBB6"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
-
-</center>
-
-<br><br>
 
 <div style="text-align:left">
 <center><font color="#a8947c">
@@ -444,7 +439,9 @@ october . 03 . 2019<br>
 <br><br><br>
 <center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
 <br><br><br>
-
+<center><a href="https://file.pooftie.me/tj"target="_blank"><font color="#a59990" style="font-size:8px;">( archive )</font></a>
+</center>
+<br><br><br>
 
 
 
