--- a/status.html
+++ b/status.html
@@ -326,11 +326,10 @@ z-index: 3;
 
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20; line-height:8px;"><br><br>
-<br>　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">tired</font>‌ ‌ ‌<sub><sub><img src="https://i.imgur.com/WMKsOT0.gif"></sub></sub>
+<br>　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">soft</font>‌ ‌ ‌<sub><sub><img src="https://i.imgur.com/WMKsOT0.gif"></sub></sub>
 <br><br>
 　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">html games</font><br><br>
 　　　　　　‌ ‌ ‌‌‌‌‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">midi music</font><br><br>
-　　　　　　‌ ‌ ‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">files website</font>
 </div>
 
 
@@ -338,6 +337,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>05.05.20</sup></font> <font color="#d8abab">→</font>　8 years together.. ♡
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>20.04.20</sup></font> <font color="#bea5ce">→</font>　each day is special
 
 <br><br><br>
@@ -363,9 +365,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>10.12.19</sup></font> <font color="#9cb7b7">→</font>　2020 is a neat number isn't it ?
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>20.11.19</sup></font> <font color="#d8abab">→</font>　*hiding in a parallel dimension*
 
 
 </div>
