--- a/fashion.html
+++ b/fashion.html
@@ -469,6 +469,10 @@ p { margin: 0; }
 <br>
 
 <br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/iTc6XVD.png"/><br><br>
+<br>
+
+<br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/uClcEMW.png"/><br><br>
 <br>
 
@@ -488,13 +492,17 @@ p { margin: 0; }
 <img width="300px" height="auto" src="https://i.imgur.com/nHi6miq.png"/><br><br>
 <br>
 
-
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/TzCGuff.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/DlOtIv2.png"/><br><br>
 <br>
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/DlOtIv2.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/fztu9M8.png"/><br><br>
+<br>
+
+
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/TzCGuff.png"/><br><br>
 <br>
 
 <br><br><br>
