--- a/gaming.html
+++ b/gaming.html
@@ -1125,10 +1125,64 @@ p { margin: 0; }
 <br><br><br><br>
 
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
+<font color="#a37a7a">　<b>vlinder life</b>　<font style="font-size:9px">♡</font></font><br><br>
+　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler15" class="btn-spoiler15">me</a>
+
+
+<center>
+
+<div id="spoiler15" class="spoiler-area is-closed15">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<img width="300px" height="auto" src="https://i.imgur.com/h6HmJg2.png"/>
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area15 {
+
+}
+.spoiler-area.is-closed15 { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler15');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "me" ){
+                this.innerHTML = "me ˣ";
+                $spoiler.classList.remove("is-closed15");
+            } else {
+                this.innerHTML = "me";
+                $spoiler.classList.add("is-closed15");
+            }
+        });
+
+    });
+
+}());
+</script>
+
+
+</center>
+
+<br><br><br><br>
+
+<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>charat</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
 <a id="linkbjinho" style="text-decoration:none;" href="https://file.pooftie.me/ct" target="_blank">
 <font color="#af8c8c">me</font></a>
+
 
 <br><br><br><br>
 
