--- a/milkywoods.html
+++ b/milkywoods.html
@@ -433,8 +433,13 @@ function getPosition(el) {
 <font style="font-size: 8px;" color="#b38d94">
 <sub><img src="https://i.imgur.com/L7o6W1E.gif"/></sub> ‌ my html games ( pc & mobile ) :</font>
 <br><br>
-<div style="width:50px; padding:5px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
-<font style="font-size: 9px;" color="#b38d94">soon !!</font>
+<div style="width:320px; padding:2px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
+
+<center>
+<a href="/lost"><img src="https://i.imgur.com/6Q8hBvu.png"/></a>
+</center><br>
+<a href="/pick"><img src="https://i.imgur.com/7kOPbrw.png"/></a>　<a href="/angel"><img src="https://i.imgur.com/j2NJoAH.png"/></a>
+
 </div>
 
 <br><br>
