--- a/blog.html
+++ b/blog.html
@@ -322,6 +322,83 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/5ukeJnS.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>may . 07 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><sub><img src="https://i.imgur.com/lvTxY9U.gif"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i am so proud of myself !!!
+i made a lot of cute stuff these days, hopefully i will get to relax a bit now without feeling weird..
+resting is very important too, right ? i have to admit that i'm not sleeping too well lately, so i must work on that now <sub><sub><img src="https://i.imgur.com/dKRRVQl.gif"/></sub></sub>
+
+i'm excited to announce that i'm making a mobile game with bubu, and i mean, a reeeal full game with lots of stuff to do, character and home customization, everything !!
+bubu is coding while i'm making the art.
+we're already making another game together ( the one i'm writing the script for the longest time ), but that one is a bit harder and we're struggling to put everything together .. so it should take a while to release <sub><sub><img src="https://i.imgur.com/IfLNLYZ.gif"/></sub></sub>
+this mobile game should be released in a few months at most, while the other one will be finished by next year.
+we're doing our best in these projects, while we also work on many other things, so i ask you to be patient.. we will not disappoint you <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+this post will only have digital works, as i said previously, but i decided to get some stuff out of the boxes because i'm honestly getting tired of my laptop.. so i've been sewing and embroidering a bit with what i have here !
+i'm going to show you next post two dresses i made + finally, the second episode of the poofties series. give me one more week for finishing everything <sub><sub><img src="https://i.imgur.com/dMHHNVL.gif"/></sub></sub>
+
+eep let's go quickly for the cute stuff i made :
+i said i would make html games and yes, i made 3 of them !!
+they're very very simple , nothing fancy, but i'm honestly happy with the results because the art came out adorable.. i'm very satisfied.
+it was really fun to mess with text boxes and button reactions, bubu helped me a bunch and we discovered many stuff together heh <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+click the images to open the games and have fun :</pre>
+<br><br>
+
+<center><a href="/lost" target="_blank"><img src="https://i.imgur.com/6Q8hBvu.png"/></a>
+<br><br>
+<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/hesitation.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">hesitation .mp3</font></a>　
+<br><br>
+<a href="/pick" target="_blank"><img src="https://i.imgur.com/7kOPbrw.png"/></a>
+<br><br>
+<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/boring%20day.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">boring day .mp3</font></a>　
+<br><br>
+<a href="/angel" target="_blank"><img src="https://i.imgur.com/j2NJoAH.png"/></a>
+<br><br>
+<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/memory.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">memory .mp3</font></a>　
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+each game has an exclusive midi melody !
+i tried to choose instruments that could convey the characters' feelings.
+my personal favorite is "memory" because it sounds innocent and nostalgic ( i purposely reduced the sound quality )
+please tell me what you think and give suggestions, i always appreciate it <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+the least thing i did was an archive website for storaging my files : <a id="linkbjinho" href="https://file.pooftie.me" target="_blank">file.pooftie.me</a>
+it's been a LONG time since i wanted to have my own personal uploader, but i knew it would be terribly time consuming to organize everything .. it took me hours, indeed, and i haven't even reuploaded all the thousands of images i use, as that would take forever ;;
+at least i organized all my other files and also the archives here from this site, and that's good enough <sub><sub><img src="https://i.imgur.com/ms9YE3Y.gif"/></sub></sub>
+it is a relief to use my own domains for hosting things, i will try to keep everything like this from now on.
+also, the layout came out adorable :</pre><br><br>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/NGH8csB.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+by the way.. i've been taking many new photography lately, since the lighting in this house is impressively beautiful !!
+expect to see a considerable improvement in the quality of my pictures from now on ~ !
+
+that's it, let's hope for better days and lots of happy memories ..</pre><br>
+xoxo <sub><sub><img src="https://i.imgur.com/6bKgSsO.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/5ukeJnS.png"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -446,96 +523,6 @@ xoxo <sub><sub><img width="30px" height="auto" src="https://i.imgur.com/VVB8fRo.
 <br>
 
 <center><img src="https://i.imgur.com/O0cIJmZ.png"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/T7FCCw1.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>march . 12 . 2020</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hi fluffies <sub><img src="https://i.imgur.com/BQ0fIi9.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-these last days has been hard ..
-my mom passed away recently. her disease was taking her from me these past months, but she was living happily even so.
-we were becoming more distant with time passing by, naturally, because of my adulthood. she wanted me to gain confidence in my independence, and she wanted me to live my dreams.
-she turned into pure childhood nostalgia for me, and now i can think of her with a smile 
-i am organizing my house now, and i'm deciding things i want to keep for memory.. i feel the same warm nostalgia with her things that i feel with my childhood items.
-she was the perfect mom for me, even making me scared with her fragility, even with her fear of abandonment.. she teached me so much.
-she did her best, and i will always remember how beautiful she was.
-i am preparing for moving with bubu, and i'm ready to start this new phase of my life that i have been waiting for so long.
-this new decade will really be something else.
-i'm so thankful for having supportive people around me, and for having this angel by my side that never fails making me smile <font color="#d3a5a5" style="font-size:11px;">♡</font>
-the words i've received filled me with hope, thank you so much for believing in my healing !!
-i want to live fully and fearless, knowing that the past is not gone because my memories are forever and really loved ..
-i am capable of living more good experiences, that will not replace the others but will certainly have the same weight in my life.
-i will become only better from this experience and all the others.
-i will be very happy <font color="#d3a5a5" style="font-size:11px;">♡</font>
-we will be.
-
-i made some updates on the shy bunny store, fixing some little issues, making the layout slightly cuter, removing some sold out items, editing pictures.. an improvement <font color="#d3a5a5" style="font-size:11px;">♡</font>
-it's a little more empty now, but for a good reason ! i've sold a lot of things and will just remake people's most favorites for now, unless i get really inspired.
-i'm happy with how my store has been helping me, it's not as much money as i get on html commissions but it's still important and i really need it right now !
-unfortunately a big part of my savings had to be spent because of the recent events, so i will have to move without much money for adaptation and decoration, exactly what i was trying to avoid... but i know that everything will be fine, because i'm with bubu and that's what matters <sub><img src="https://i.imgur.com/5XtHNWA.gif"/></sub>
-things will take a while to get settled but i'm prepared for that.
-
-i also updated my html test page a little bit !
-it had frequent visits ( from same ip ) so i suppose some people actually use this to work with html :</pre><br>
-<br>
-
-<center><img width="430px" height="auto" src="https://i.imgur.com/C0TNv4X.png"/></center>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://file.pooftie.me/r/test%20html.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">test html .rar</font></a>　</center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i fixed some things and made the layout a lot cuter. i'm proud and i hope you like it too.. !
-i haven't used this page so much lately but it's still very useful, especially when i'm on mobile.
-remember you can access it online at <a id="linkbjinho" href="https://test.pooftie.me" target="_blank">test.pooftie.me</a>
-
-now i will show you this beautiful long dress, with a lovely golden reliquary necklace :</pre><br>
-<br>
-
-<center><img width="390px" height="auto" src="https://i.imgur.com/2d0uspY.png"/></center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-it's not very recent, but i used it recently on a date with bubu ( and the teddy bear purse i made the other day ) so i just reminded i should post it <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-it has some very delicate details like the cream satin ribbons and tiny lace, a nightmare that is absolutely worth going through <sub><img src="https://i.imgur.com/iCF9Z06.gif"/></sub>
-it's a pure cotton fabric, really gorgeous.. cotton fabrics are the best to work with, in my opinion.
-i am so glad i have learned sewing with my mom, she helped me so much ...
-i suppose the name of this fabric is "eyelet", but here we call it "laise". it goes for the embroidered lace and the cotton fabric with details as well ( this one has tiny dots )
-also, some posts ago i talked about using "cream lacy socks & a pair of brown lolita mary janes" and someone actually asked me to show it, so here it is :</pre><br>
-<br>
-
-<center><img width="430px" height="auto" src="https://i.imgur.com/7w8Z17x.png"/></center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i made the frilly socks myself, and the shoes are absolutely adorable !! bubu bought them for me not long ago <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i also have two black ones and a baby pink one, but they're a little too old now. i use my shoes constantly until they're reeeeally old.. it takes some years but i really needed new ones at this point so i'm happy with this lovely present <font color="#d3a5a5" style="font-size:11px;">♡♡♡</font>
-recently i've been into those cute vintage brown boots women wear with long dresses ( very popular in mori kei as well ). i have one of these and i feel beautifully mature when i wear it with a long dress, so i might use it with the dress above someday for going on a picnic <sub><img src="https://i.imgur.com/WpBhQlT.gif"/></sub>
-
-well, i will naturally keep doing what i love, so you can expect regular updates just as always !
-if i'm motivated, i will be productive. it's that simple <sub><img src="https://i.imgur.com/SdnVQnB.gif"/></sub>
-thank you fluffies for always be here looking forward my works, this place is so precious for me i can't explain.. please stay safe <font color="#d3a5a5" style="font-size:11px;">♡</font></pre><br>
-xoxo <sub><sub><img src="https://i.imgur.com/BsGlypz.gif"/></sub></sub></pre>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/T7FCCw1.png"/></center>
 
 <br><br><br>
 
