--- a/portfolio.html
+++ b/portfolio.html
@@ -404,8 +404,9 @@ z-index: 3;
 <center>
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> phone customization<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/9RPJR2x.png"><br><br>
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> pc & phone customization<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="400px" height="auto" src="https://i.imgur.com/sFC4LuS.gif"><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/FB1yE5M.png"><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/6QZX0tS.png"><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/S1Y4GqA.gif">
 <br><br><br><br>
