--- a/archive.html
+++ b/archive.html
@@ -1016,7 +1016,7 @@ i have been experimenting with collages and image editing a lot recently, so i e
 this is how it turned out ( i'm very proud ) :</pre><br>
 <br><br>
 
-<center><img width="auto" height="400px" src="https://i.imgur.com/Shftace.png"/> <img width="auto" height="400px" src="https://i.imgur.com/B5wEFcC.png"/></center><br>
+<center><img width="auto" height="400px" src="https://i.imgur.com/FB1yE5M.png"/> <img width="auto" height="400px" src="https://i.imgur.com/B5wEFcC.png"/></center><br>
 
 </font></font></font>
 
