--- a/recommended.html
+++ b/recommended.html
@@ -326,7 +326,11 @@ z-index: 3;
 <font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
 <br><br><br>
 
-　<a href="https://kyumiare.neocities.org" target="_blank"><img src="https://i.imgur.com/SDbQzIw.png"></a>
+　<a href="https://teddybear-halo.neocities.org" target="_blank"><img src="https://i.imgur.com/wZIp3Fp.gif"></a>
+　<a href="https://snowy.neocities.org" target="_blank"><img src="https://i.imgur.com/Ja8LCbO.png"></a>
+　<a href="https://valentines.neocities.org" target="_blank"><img src="https://i.imgur.com/j1itU4N.gif"></a>
+
+　　‌‌<br><br>　<a href="https://kyumiare.neocities.org" target="_blank"><img src="https://i.imgur.com/SDbQzIw.png"></a>
 　<a href="https://reia.neocities.org" target="_blank"><img src="https://i.imgur.com/Oo4OZuP.png"></a>
 　<a href="https://melodicake.neocities.org" target="_blank"><img src="https://i.imgur.com/JgeSrkA.gif"></a>
 
