--- a/recommended.html
+++ b/recommended.html
@@ -338,7 +338,7 @@ z-index: 3;
 <a href="https://angel99.neocities.org" target="_blank"><img src="https://i.imgur.com/DS7h4zO.png"></a>
 <a href="https://farinawvence.blogspot.com" target="_blank"><img src="https://i.imgur.com/dyNNW2I.gif"></a>
 
-　　<br><br><a href="https://mimi-dollie.blogspot.com" target="_blank"><img src="https://i.imgur.com/BCGhvCY.gif"></a>
+　　<br><br><a href="http://web.archive.org/web/20190702185153/https://mimi-dollie.blogspot.com/" target="_blank"><img src="https://i.imgur.com/BCGhvCY.gif"></a>
 　<a href="https://www.aniblog.com.mx" target="_blank"><img src="https://i.imgur.com/TYCJqcI.gif"></a>
 　<a href="https://woneland.blogspot.com" target="_blank"><img src="https://i.imgur.com/41vCABt.gif"></a>
 
@@ -351,7 +351,7 @@ z-index: 3;
 　<a href="https://web.archive.org/web/20130501011051/http://sao-charin.babymilk.jp/" target="_blank"><img src="https://i.imgur.com/orHAzIJ.gif"></a>
 
 　<br><br><a href="http://whimsical.heartette.net/" target="_blank"><img src="https://i.imgur.com/Szmjm6A.gif"></a>
-　<a href="https://bunnymilku.blogspot.com/" target="_blank"><img src="https://i.imgur.com/ytdhHO6.gif"></a>
+　<a href="http://web.archive.org/web/20190913175901/https://bunnymilku.blogspot.com/" target="_blank"><img src="https://i.imgur.com/ytdhHO6.gif"></a>
 　<a href="http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/hUQytvV.gif"></a>
 
 　<br><br><a href="http://bitmapdreams.lastsecret.net/" target="_blank"><img src="https://i.imgur.com/NrB9UB9.gif"></a>
