--- a/status.html
+++ b/status.html
@@ -330,6 +330,7 @@ z-index: 3;
 <br><br>
 　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">sewing a dress</font><br><br>
 　　　　　‌‌‌‌‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">art for mobile game</font><br><br>
+　　　　　‌‌‌‌‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">video editing</font><br><br>
 </div>
 
 
