--- a/blog.html
+++ b/blog.html
@@ -322,6 +322,94 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+
+<center><img src="https://i.imgur.com/gLJhbhk.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>may . 16 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/uCrx8EY.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+here i am with the content i promised last week !!
+i'm glad i'm getting to be productive during quarantine, and i even got a few commissions, but sadly my store is still paused because i can't go to the post office..
+it's hard but i'm trying my best to keep my mind and body healthy, even without the regular walks in the park and much less money in the bank account .....
+many things are happening at once this year, but i am maturing and getting better with it. surprisingly, my mental health has been more stable than ever, i'm learning many things and improving others with this free time !!
+let's try our best to make this time a positive experience <sub><img src="https://i.imgur.com/y5C6v3u.gif"/></sub>
+
+without further ado, let's get to the stuff i made !
+the second episode of poofties is finished, thank you for your patience <font color="#d3a5a5" style="font-size:11px;">♡</font>
+( make sure to watch the first episode <a id="linkbjinho" href="/stories" target="_blank">here</a> first )
+i will try not to take so long to make the next one .. even if ideas appear along the way, i will try to prioritize this project a little more heh
+here it is :</pre>
+<br><br>
+
+<center><video width="410" height="251" controls>
+<source src="https://file.pooftie.me/v/ii.mp4" type="video/mp4">
+</video></center><br><br>
+
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/picnic.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">picnic .mp3</font></a>　
+</center>
+<br><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this one has a lot more dialogues and characters, and i'm very satisfied with the results .. i hope you are enjoying the series <sub><img src="https://i.imgur.com/KOy4puN.gif"/></sub>
+the melody i made is a simple loop but it was necessary not to disturb the dialog, it was a problem last time !!
+in the next episode i'll try to make more cute scenarios like last time. let's see how it comes out ~
+
+now i have two lovely dresses i sewed, after a long time of not sewing anything <sub><sub><img src="https://i.imgur.com/W1wsqcE.gif"/></sub></sub>
+</pre><br><br>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/Av5dNm1.jpg"/></center>
+<br>
+<center><img width="410px" height="auto" src="https://i.imgur.com/b5fz6eM.jpg"/></center>
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+you might have seen some spoilers of the first dress because i posted pictures of me wearing it last week <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+i made them both based on vintage nightgowns i've seen before, and i actually was going to use them as nightgowns,, but they turned out so cute i couldn't help using them as dresses <sub><sub><img src="https://i.imgur.com/AcVBE5p.gif"/></sub></sub>
+i specially like the embroidered flowers, it was easy to do but took a while to finish.. i don't usually work on large embroidery projects so this was new to me !
+
+well, lastly, i received some requests to post more of my favorite ukagaka
+and people wanting to see my pc updated ( i posted screenshots of my pc a few years ago and always post my phone when decorated )
+and also people wondering how i modify the look of websites..
+so i'm going to show you everything together :</pre><br><br>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/52bygik.gif"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://file.pooftie.me/r/renai.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">renai .rar</font></a>　</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+these ukagaka are called "renai" and are absolutely adorable <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+not very hard to find, but well, there they are. enjoy !!
+about the sites .. there is really no secret, i basically insert css into the source code of the sites using the "inspect element" function. you can do this with any site, just explore the source code to find the appearance stuff and that's it.. !
+it takes time and patience, and whenever the site updates the layout you will have to do it all over again, but if you love using beautiful sites like me .. go for it
+i'm not a real expert with the "inspect element" so i suggest you searching for tutorials, it's really useful.
+
+that's it for today, i will take a good nap now <sub><img src="https://i.imgur.com/8IR46FP.gif"/></sub>
+thank you for your support and don't forget to drink water !
+</pre><br>
+xoxo <sub><sub><img src="https://i.imgur.com/1IBk2JR.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/gLJhbhk.gif"/></center>
+
+<br><br><br>
+
+
+
 <center><img src="https://i.imgur.com/5ukeJnS.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -475,54 +563,6 @@ xoxo <sub><sub><img src="https://i.imgur.com/psrOEBE.png"/></sub></sub></pre>
 <br>
 
 <center><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/><img src="https://i.imgur.com/kucLPar.png"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/O0cIJmZ.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>march . 27 . 2020</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <sub><sub><img width="30px" height="auto" src="https://i.imgur.com/eMjBRc3.png"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-a whole lot happened lately.. it's been tiring but really fulfilling, i am living my happiest days despite all the problems <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i'm in the middle of the moving, and it's taking more time than expected because of the quarantine. we decided to completely renovate and redecorate this tiny little house near my mother-in-law's house, we need to buy lots of materials ( and new furniture ) but we can't for the time being, so we're working with what we have !
-it's an adorabe house with one bedroom, one bathroom, kitchen ( yes it is very small, i love it ) and a big garden space.
-it's a little far from where bubu works so we are considering renting an apartment in the future, if it's more comfortable.. but at the moment he is working "home office" so it is not a problem, anyway this little house will always be ours and it is a great place for animals and plants !
-i'm happy to be close to nature whenever i can <sub><sub><img width="25px" height="auto" src="https://i.imgur.com/VLrH9jG.png"/></sub></sub>
-these days have been difficult for me to work because i can't go to the post office and people are saving for the quarantine, so no commissions ... i'm trying my best to help with housework and renovations, i'm cleaning and painting and doing everything i can do !!
-we are staying at my mother-in-law's house at the moment until the quarantine ends, i hope that everything will be normalized soon so that i can take my belongings out of boxes and decorate our new little home very cutely <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
-
-these days i haven't done many things that i can show here, but i colored two beautiful drawings : </pre>
-
-<center><img width="410px" height="auto" src="https://i.imgur.com/qV1RjpK.png"/><br>
-<img width="410px" height="auto" src="https://i.imgur.com/MNr6Zc4.png"/></center>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-these are from the talented <a id="linkbjinho" href="https://www.instagram.com/baby.doll.heart/" target="_blank">baby.doll.heart</a> on instagram, please check her work..
-she's always drawing wonderful pieces <sub><sub><img width="30px" height="auto" src="https://i.imgur.com/mURljB7.png"/></sub></sub>
-i experimented with textures this time, and i really liked the result !!
-i like to paint "flat", without much contrast of light & shadows, so textures and patterns help a lot to give detail softly <font color="#d3a5a5" style="font-size:11px;">♡</font>
-which one did you like the most ?
-
-ah, there's one more thing to tell you fluffies !
-i bought an adorable domain, <b>pooftie.me</b> <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i'm using it for my tumblr blog now, and all of my "html stuff" are subdomains at pooftie.me because, well, it's always safer to use your own domains ..
-i had multiple problems using free domains, even though they're cute safety comes first.
-please check all of my sites and tumblr blog if you haven't yet, i'm proud of them <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-
-that's it for today, please take care and stay home !!</pre><br>
-xoxo <sub><sub><img width="30px" height="auto" src="https://i.imgur.com/VVB8fRo.png"/></sub></sub></pre>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/O0cIJmZ.png"/></center>
 
 <br><br><br>
 
