--- a/archive.html
+++ b/archive.html
@@ -319,6 +319,56 @@ overflow-y:hidden;
 overflow-x:hidden;
 font-family: Verdana;">
 
+<br>
+
+<center><img src="https://i.imgur.com/O0cIJmZ.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>march . 27 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><sub><img width="30px" height="auto" src="https://i.imgur.com/eMjBRc3.png"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+a whole lot happened lately.. it's been tiring but really fulfilling, i am living my happiest days despite all the problems <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i'm in the middle of the moving, and it's taking more time than expected because of the quarantine. we decided to completely renovate and redecorate this tiny little house near my mother-in-law's house, we need to buy lots of materials ( and new furniture ) but we can't for the time being, so we're working with what we have !
+it's an adorabe house with one bedroom, one bathroom, kitchen ( yes it is very small, i love it ) and a big garden space.
+it's a little far from where bubu works so we are considering renting an apartment in the future, if it's more comfortable.. but at the moment he is working "home office" so it is not a problem, anyway this little house will always be ours and it is a great place for animals and plants !
+i'm happy to be close to nature whenever i can <sub><sub><img width="25px" height="auto" src="https://i.imgur.com/VLrH9jG.png"/></sub></sub>
+these days have been difficult for me to work because i can't go to the post office and people are saving for the quarantine, so no commissions ... i'm trying my best to help with housework and renovations, i'm cleaning and painting and doing everything i can do !!
+we are staying at my mother-in-law's house at the moment until the quarantine ends, i hope that everything will be normalized soon so that i can take my belongings out of boxes and decorate our new little home very cutely <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+
+these days i haven't done many things that i can show here, but i colored two beautiful drawings : </pre>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/qV1RjpK.png"/><br>
+<img width="410px" height="auto" src="https://i.imgur.com/MNr6Zc4.png"/></center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+these are from the talented <a id="linkbjinho" href="https://www.instagram.com/baby.doll.heart/" target="_blank">baby.doll.heart</a> on instagram, please check her work..
+she's always drawing wonderful pieces <sub><sub><img width="30px" height="auto" src="https://i.imgur.com/mURljB7.png"/></sub></sub>
+i experimented with textures this time, and i really liked the result !!
+i like to paint "flat", without much contrast of light & shadows, so textures and patterns help a lot to give detail softly <font color="#d3a5a5" style="font-size:11px;">♡</font>
+which one did you like the most ?
+
+ah, there's one more thing to tell you fluffies !
+i bought an adorable domain, <b>pooftie.me</b> <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i'm using it for my tumblr blog now, and all of my "html stuff" are subdomains at pooftie.me because, well, it's always safer to use your own domains ..
+i had multiple problems using free domains, even though they're cute safety comes first.
+please check all of my sites and tumblr blog if you haven't yet, i'm proud of them <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+that's it for today, please take care and stay home !!</pre><br>
+xoxo <sub><sub><img width="30px" height="auto" src="https://i.imgur.com/VVB8fRo.png"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/O0cIJmZ.png"/></center>
+
+<br><br><br>
+
 
 <br>
 
