--- a/stories.html
+++ b/stories.html
@@ -222,17 +222,22 @@ z-index: 3;
 
 <div id="stuff">
 
-<br><br><br>
+<br><br>
 
 <center>
 <sub><sub><img src="https://i.imgur.com/crKdlH8.png"/></sub></sub><font color="#a38e94" style="font-size:10px;">　poofties, through her eyes　</font><sub><sub><img src="https://i.imgur.com/crKdlH8.png"/></sub></sub><br><br>
 <font color="#e8c8d2" style="font-size:10px;">( click the preview for watching )</font><br><br><br>
 
 <font color="#b89a9a" style="font-size:10px;">first episode</font><font color="#e6aeae" style="font-size:11px;"> ♡ </font><font color="#b89a9a" style="font-size:10px;">good morning</font><br><br>
-<a href="/i"><img width="360px" height="auto" src="https://i.imgur.com/CIaBxwl.png"/></a></center><br>
+<a href="/i"><img width="360px" height="auto" src="https://i.imgur.com/CIaBxwl.png"/></a><br>
+
+<br><br>
+
+<font color="#b89a9a" style="font-size:10px;">second episode</font><font color="#e6aeae" style="font-size:11px;"> ♡ </font><font color="#b89a9a" style="font-size:10px;">nice to meet you</font><br><br>
+<a href="/ii"><img width="360px" height="auto" src="https://i.imgur.com/Ba7h5DG.png"/></a><br>
 </center>
 
-<br><br><br>
+<br><br><br><br>
 </div>
 </div>
 
