--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -319,6 +319,31 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 </font>
 <br><br>
 
+<div style="text-align:left">
+<center><font color="#ba9187">
+<img src="https://i.imgur.com/TkaVrz0.png"><br><br>
+may . 24 . 2020<br>
+✄ quietude
+</font>
+</center>
+<font color="#C2B1B1">
+<br><br>
+
+　　where thoughts are silent and hopes inherent,<br>
+　　　　　　love can be felt genuinely and transparent<br>
+<br>
+　　one heart that can find comfort in solitude,<br>
+　　　　　　lives only for the wholeness in quietude<br>
+<br>
+　　touching reality with sheer skin,<br>
+　　spending time existing in between,<br>
+　　　　　　the innocent soul tries to find beauty within
+<br><br>
+</font>
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
 
 <div style="text-align:left">
 <center><font color="#a8947c">
@@ -412,29 +437,6 @@ november . 08 . 2019<br>
 <br><br>
 </font>
 
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
-
-<div style="text-align:left">
-<center><font color="#a8947c">
-<img src="https://i.imgur.com/0QvTpoL.png"><br><br>
-october . 03 . 2019<br>
-✄ the biggest little girl
-</font>
-</center>
-<font color="#c1ae99">
-<br><br>
-
-　　Once upon a time there was a little girl with a big head and a small body who loved cats.<br>
-　　She felt enormously tiny, super gigantly small. Because of that, she always wondered "Am I too big for this ...?" and hid under the blankets.<br>
-　　She was talking to kittens under the table, and they said she's too big to fit in there, even though she was already there.<br>
-　　Good thing the little girl was quite happy anyway! She ignored all the rude little critters, who were her best and kindest friends.<br>
-　　Moral of the story: If you feel minusculy large or gigantly tiny, you are probably medium.
-<br><br>
-<center>E N D</center>
-</font>
 
 <br><br><br>
 <center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
