--- a/fashion.html
+++ b/fashion.html
@@ -342,7 +342,16 @@ p { margin: 0; }
 <br>
 <center>
 
+
+
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 06.08.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/dPHLbCK.png"/><br>
+<br>
+
+
+
+<br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 04.20.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/AlIxJOV.png"/><br>
 <br>
@@ -389,13 +398,6 @@ p { margin: 0; }
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 08.01.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/j1ewq2s.png"/><br>
 <br>
-
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 05.09.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/iM3EPm2.png"/><br>
-<br>
-
 
 
 
@@ -461,7 +463,7 @@ p { margin: 0; }
 <font color="#bca6a0">( those photos are timeless )</font><br><br>
 <br><br>
 
-<img width="300px" height="auto" src="https://i.imgur.com/2y7cEiK.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/dzzKWU1.jpg"/><br><br>
 <br>
 
 <br><br><br>
@@ -485,6 +487,10 @@ p { margin: 0; }
 <br>
 
 <br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/6xswFvY.jpg"/><br><br>
+<br>
+
+<br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/v85iR7v.png"/><br><br>
 <br>
 
@@ -493,7 +499,7 @@ p { margin: 0; }
 <br>
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/nHi6miq.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/vcKmZH5.jpg"/><br><br>
 <br>
 
 <br><br><br>
