--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -320,6 +320,26 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 <br><br>
 
 <div style="text-align:left">
+<center><font color="#b79e96">
+<img src="https://i.imgur.com/B0R9I5n.png"><br><br>
+july . 01 . 2020<br>
+✄ understanding
+</font>
+</center>
+<font color="#c9bcb1">
+<br><br>
+　　aiming for slowly, patiently, heartfully becoming wiser. becoming light-hearted, the embodiment of innocence.<br>
+　　as painful as it can be, an essential part of survival, a daydreaming mind is trying to seek solace in its precious fragility.<br>
+　　will we ever reach safety from our own thoughts ?<br>
+　　the delicate sense of self-esteem grows stronger with each wound, but only if well cared.
+<br><br>
+</font>
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+<div style="text-align:left">
 <center><font color="#ba9187">
 <img src="https://i.imgur.com/TkaVrz0.png"><br><br>
 may . 24 . 2020<br>
@@ -409,33 +429,6 @@ january . 07 . 2020<br>
 <br><br>
 </font>
 
-
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
-
-<div style="text-align:left">
-<center><font color="#ba9187">
-<img src="https://i.imgur.com/TkaVrz0.png"><br><br>
-november . 08 . 2019<br>
-✄ small delight
-</font>
-</center>
-<font color="#C2B1B1">
-<br><br>
-
-　fragments of happiness carry you away ..<br>
-　　　　　　　it comes in a lovely surprise<br>
-　　　　　　　　it was all worth it !!!<br>
-　　　　　　　　　　　　　　it disappears briefly ,<br>
-　　　　　　　　　　　　leaving thin air and warm nostalgia .<br>
-<br>
-　you desperately try to collect the pieces ,<br>
-　　since joy is a secret gift hidden in little things ..<br>
-　　　　　　　　　it is there waiting for you to grab it tightly ♡
-<br><br>
-</font>
 
 
 <br><br><br>
