--- a/fashion.html
+++ b/fashion.html
@@ -343,8 +343,13 @@ p { margin: 0; }
 <center>
 
 
-
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 07.02.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/nOZImYH.png"/><br>
+<br>
+
+
+<br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 06.08.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/dPHLbCK.png"/><br>
 <br>
@@ -391,12 +396,6 @@ p { margin: 0; }
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 09.26.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/wTPiJOy.png"/><br>
-<br>
-
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 08.01.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/j1ewq2s.png"/><br>
 <br>
 
 
