--- a/links.html
+++ b/links.html
@@ -350,7 +350,7 @@ z-index: 3;
 <sub><sub><img src="https://i.imgur.com/SYSp3iZ.png"></sub></sub><font color="#ddcbc1"> for friends :</font><br>
 <br>
 　<font color="#7a6b6b">line </font><a id="eee" title="add link" href="https://line.me/ti/p/~pooftie" target="_blank" >♡</a><br>
-　<font color="#7a6b6b">dscrd </font><a id="eee" title="add server" href="https://discord.gg/Wq5NhFm" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">dscrd </font><a id="eee" title="add server" href="https://discord.gg/Y3wpCDe" target="_blank" >♡</a><br>
 </div>
 
 <div style="position:relative; float:left;">
