--- a/fashion.html
+++ b/fashion.html
@@ -470,7 +470,7 @@ p { margin: 0; }
 <br>
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/iTc6XVD.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/0nU5wdS.jpg"/><br><br>
 <br>
 
 <br><br><br>
@@ -498,17 +498,12 @@ p { margin: 0; }
 <br>
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/vcKmZH5.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/fztu9M8.png"/><br><br>
 <br>
 
 <br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/DlOtIv2.png"/><br><br>
 <br>
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/fztu9M8.png"/><br><br>
-<br>
-
 
 <br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/TzCGuff.png"/><br><br>
@@ -518,6 +513,9 @@ p { margin: 0; }
 <img width="300px" height="auto" src="https://i.imgur.com/8DDOBIY.png"/><br><br>
 <br>
 
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/iTc6XVD.png"/><br><br>
+<br>
 
 <br><br>
 
