--- a/links.html
+++ b/links.html
@@ -306,17 +306,30 @@ z-index: 3;
 
 <div id="stuff">
 
-<div style="position:absolute; left:25%; right:20%;">
-<br><br><br><br><br><br><br>
+<div style="position:absolute; left:23%; right:23%;">
+<br><br><br><br>
 <style>
-#ooo { color: #9b8b8b; }
+#ooo { color: #c4a9ab; }
 #actv { color: #d1abab; }
-#eee { color: #bfaba0; }
+#eee { color: #d1abab; }
 </style>
-<div style="position:relative; float:right;">
-<sub><sub><img src="https://i.imgur.com/z2FwsNG.png"></sub></sub><font color="#c1a98b">
- html stuff :</font><br><br>
-<div style="width: 100px; height: 50px; overflow-x:hidden; line-height:13px; padding:5px; border: 1px dotted #e2d5d0;">
+
+<div style="position:relative; top:20px; width: 100px; height: 130px; overflow:hidden; float:left; border: 15px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:13px; padding:5px;">
+<font color="#b89c9f">
+<sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/ihkqM9r.png"></sub></sub></sub> my accs :<br></font>
+<br>
+　<font color="#7a6b6b">tmblr </font><a id="actv" title="aesthetic blog" href="https://pooftie.me" target="_blank" >♡</a>　<font color="#7a6b6b">yt </font><a id="actv" title="playlist ch" href="https://www.youtube.com/pooftie" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">twt </font><a id="actv" title="comfy acc" href="https://twitter.com/pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/pooftie" target="_blank" >♡</a><br>
+<br>
+<sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> chat apps :</font><br>
+<br>
+　<font color="#7a6b6b">line </font><a id="eee" title="add link" href="https://line.me/ti/p/~pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">dscrd </font><a id="eee" title="add server" href="https://discord.gg/Y3wpCDe" target="_blank" >♡</a><br>
+</div>
+
+<div style="position:relative; float:right; overflow:hidden; border: 15px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px;">
+<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b89c9f">
+ my html stuff :</font><br>
+<div style="border: none; width: 100px; height: 150px; margin-top:6px; overflow-x:hidden; line-height:13px; padding-right:5px; padding-left:5px;">
 <a id="ooo" href="https://file.pooftie.me" target="_blank" >my files archive</a>
 <br>
 <a id="ooo" href="https://tea.pooftie.me" target="_blank" >weather for tea ?</a>
@@ -347,28 +360,14 @@ z-index: 3;
 </div>
 </div>
 
-<div style="position:relative; float:left;">
-<font color="#dbafaf">
-<sub><sub><img src="https://i.imgur.com/VMNuA8L.png"></sub></sub> active accs :<br></font>
-<br>
-　<font color="#7a6b6b">tmblr </font><a id="actv" title="aesthetic blog" href="https://pooftie.me" target="_blank" >♡</a>　<font color="#7a6b6b">yt </font><a id="actv" title="playlist ch" href="https://www.youtube.com/pooftie" target="_blank" >♡</a><br>
-　<font color="#7a6b6b">twt </font><a id="actv" title="comfy acc" href="https://twitter.com/pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/pooftie" target="_blank" >♡</a><br>
-<br>
-</div>
-<div style="position:relative; float:right; right:7%;">
-<sub><sub><img src="https://i.imgur.com/SYSp3iZ.png"></sub></sub><font color="#ddcbc1"> for friends :</font><br>
-<br>
-　<font color="#7a6b6b">line </font><a id="eee" title="add link" href="https://line.me/ti/p/~pooftie" target="_blank" >♡</a><br>
-　<font color="#7a6b6b">dscrd </font><a id="eee" title="add server" href="https://discord.gg/Y3wpCDe" target="_blank" >♡</a><br>
-</div>
-
 <br><br><br><br><br><br><br><br>
 </div>
-<div style="position:absolute; left:25%; right:25%; top:70%;">
-<font color="#a59490">
-<center><b>important :</b><br><br>
-i do have some secret accounts that i use for backup or personal stuff. i don't use the middlepot name on social media accs, so if you see any account with my name out there that is not on that list, <b>it's not mine</b>.<br>
-if you have any questions about an account, please don't hesitate to contact me :<br><br></font>
+<div style="position:absolute; left:20%; right:20%; top:70%;">
+<font color="#a59490" style="font-size:9px;">
+<center><b>important :</b><br>
+i do have some secret accounts that i use for backup or personal stuff.<br>
+i don't use the middlepot name on social media, so if you see any account with my name out there that is not on that list, <b>it's not mine</b>.<br>
+if you have any doubts, please don't hesitate to contact me :<br><br></font>
 <font id="linkzinho" color="#cea9a9">letters@middlepot.com</font></font></center>
 <br><br><br>
 
