--- a/links.html
+++ b/links.html
@@ -334,7 +334,7 @@ z-index: 3;
 <br>
 <a id="ooo" href="https://aes.pooftie.me" target="_blank" >aesthetic journal</a>
 <br>
-<a id="ooo" href="https://tea.pooftie.me" target="_blank" >weather for tea ?</a>
+<a id="ooo" href="https://tea.pooftie.me" target="_blank" >weather for tea?</a>
 <br>
 <a id="ooo" href="https://1997.pooftie.me" target="_blank" >win95 desktop</a>
 <br>
@@ -342,7 +342,7 @@ z-index: 3;
 <br>
 <a id="ooo" href="https://test.pooftie.me" target="_blank" >html test</a>
 <br>
-<a id="ooo" href="https://day.pooftie.me" target="_blank" >my routine schedule</a>
+<a id="ooo" href="https://day.pooftie.me" target="_blank" >my routine</a>
 <br>
 <a id="ooo" href="https://utf8.pooftie.me" target="_blank" >unicode fonts</a>
 <br>
@@ -354,7 +354,7 @@ z-index: 3;
 <br>
 <a id="ooo" href="https://txt.pooftie.me" target="_blank" >offline ywot</a>
 <br>
-<a id="ooo" href="https://2006.pooftie.me" target="_blank" >my first layout ever</a>
+<a id="ooo" href="https://2006.pooftie.me" target="_blank" >my first layout</a>
 <br>
 <a id="ooo" href="https://soft.pooftie.me" target="_blank" >???</a>
 <br>
